cmake_minimum_required(VERSION 3.24)

project(put_a_hotel_on_boardwalk)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

Include(FetchContent)

FetchContent_Declare(
  Catch2
  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
  GIT_TAG        v3.8.1
)

FetchContent_MakeAvailable(Catch2)

add_executable(lab5_test tests/lab5_test.cpp src/lab5.cpp)
add_executable(main main.cpp src/lab5.cpp)
target_link_libraries(lab5_test PRIVATE Catch2::Catch2WithMain)